Hbase_Use of Hbase shell.txt
   Usage of hbase shell

[training@localhost ~]$ hbase shell
23/03/06 17:30:05 WARN conf.Configuration: hadoop.native.lib is deprecated. Instead, use io.native.lib.available
HBase Shell; enter 'help<RETURN>' for list of supported commands.
Type "exit<RETURN>" to leave the HBase Shell
Version 0.92.1-cdh4.1.1, rUnknown, Tue Oct 16 11:44:19 PDT 2012

hbase(main):001:0> show tables
NameError: undefined local variable or method `tables' for #<Object:0x627b5c>

hbase(main):002:0> create 'user',{NAME=>'info',VERSIONS=>1}

ERROR: Table already exists: user!

Here is some help for this command:
Create table; pass table name, a dictionary of specifications per
column family, and optionally a dictionary of table configuration.
Dictionaries are described below in the GENERAL NOTES section.
Examples:

  hbase> create 't1', {NAME => 'f1', VERSIONS => 5}
  hbase> create 't1', {NAME => 'f1'}, {NAME => 'f2'}, {NAME => 'f3'}
  hbase> # The above in shorthand would be the following:
  hbase> create 't1', 'f1', 'f2', 'f3'
  hbase> create 't1', {NAME => 'f1', VERSIONS => 1, TTL => 2592000, BLOCKCACHE => true}
  hbase> create 't1', 'f1', {SPLITS => ['10', '20', '30', '40']}
  hbase> create 't1', 'f1', {SPLITS_FILE => 'splits.txt'}


hbase(main):003:0> create 'user1',{NAME=>'info',VERSIONS=>1}

ERROR: Table already exists: user1!

Here is some help for this command:
Create table; pass table name, a dictionary of specifications per
column family, and optionally a dictionary of table configuration.
Dictionaries are described below in the GENERAL NOTES section.
Examples:

  hbase> create 't1', {NAME => 'f1', VERSIONS => 5}
  hbase> create 't1', {NAME => 'f1'}, {NAME => 'f2'}, {NAME => 'f3'}
  hbase> # The above in shorthand would be the following:
  hbase> create 't1', 'f1', 'f2', 'f3'
  hbase> create 't1', {NAME => 'f1', VERSIONS => 1, TTL => 2592000, BLOCKCACHE => true}
  hbase> create 't1', 'f1', {SPLITS => ['10', '20', '30', '40']}
  hbase> create 't1', 'f1', {SPLITS_FILE => 'splits.txt'}


hbase(main):004:0> create 'user2',{NAME=>'info',VERSIONS=>1}
0 row(s) in 1.0900 seconds

hbase(main):005:0> describe user2
NameError: undefined local variable or method `user2' for #<Object:0x627b5c>

hbase(main):006:0> describe 'user2'
DESCRIPTION                                                                       ENABLED                                    
 {NAME => 'user2', FAMILIES => [{NAME => 'info', BLOOMFILTER => 'NONE', REPLICATI true                                       
 ON_SCOPE => '0', VERSIONS => '1', COMPRESSION => 'NONE', MIN_VERSIONS => '0', TT                                            
 L => '2147483647', BLOCKSIZE => '65536', IN_MEMORY => 'false', BLOCKCACHE => 'tr                                            
 ue'}]}                                                                                                                      
1 row(s) in 0.1180 seconds

hbase(main):007:0> put 'user2','42','inf0:name','kavin'

ERROR: org.apache.hadoop.hbase.client.RetriesExhaustedWithDetailsException: Failed 1 action: org.apache.hadoop.hbase.regionserver.NoSuchColumnFamilyException: Column family inf0 does not exist in region user2,,1678104143366.611372723eb8b39703d4ac104dc0d506. in table {NAME => 'user2', FAMILIES => [{NAME => 'info', BLOOMFILTER => 'NONE', REPLICATION_SCOPE => '0', COMPRESSION => 'NONE', VERSIONS => '1', TTL => '2147483647', MIN_VERSIONS => '0', BLOCKSIZE => '65536', IN_MEMORY => 'false', BLOCKCACHE => 'true'}]}
	at org.apache.hadoop.hbase.regionserver.HRegionServer.multi(HRegionServer.java:3115)
	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:39)
	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:25)
	at java.lang.reflect.Method.invoke(Method.java:597)
	at org.apache.hadoop.hbase.ipc.WritableRpcEngine$Server.call(WritableRpcEngine.java:364)
	at org.apache.hadoop.hbase.ipc.HBaseServer$Handler.run(HBaseServer.java:1345)
: 1 time, servers with issues: localhost.localdomain:55971, 

Here is some help for this command:
Put a cell 'value' at specified table/row/column and optionally
timestamp coordinates.  To put a cell value into table 't1' at
row 'r1' under column 'c1' marked with the time 'ts1', do:

  hbase> put 't1', 'r1', 'c1', 'value', ts1


hbase(main):008:0> put 'user2','42','info:name','kavin'
0 row(s) in 0.0080 seconds

hbase(main):009:0> scan 'user2
hbase(main):010:0' scan 'user2
SyntaxError: (hbase):10: syntax error, unexpected tIDENTIFIER

scan 'user2
          ^

hbase(main):011:0> scan 'user2'
ROW                              COLUMN+CELL                                                                                 
 42                              column=info:name, timestamp=1678104235601, value=kavin                                      
1 row(s) in 0.0390 seconds

hbase(main):012:0> create 'blog','meta','body','comment'
0 row(s) in 1.3410 seconds

hbase(main):013:0> list
TABLE                                                                                                                        
blog                                                                                                                         
blogs                                                                                                                        
blogs1                                                                                                                       
hbaseUserRating1                                                                                                             
hbaseUserRating2                                                                                                             
hbaseUserRating3                                                                                                             
hbaseUserRating4                                                                                                             
hbaseUserRatings                                                                                                             
hbaseUsrRatings                                                                                                              
myplace                                                                                                                      
mytable                                                                                                                      
user                                                                                                                         
user1                                                                                                                        
user2                                                                                                                        
14 row(s) in 0.0710 seconds


-------------------------------------------------------------------------------------------------------------------

Usage of hbase shell Hadoop Terminal 

[training@localhost ~]$ hadoop fs -ls /hbase
Found 22 items
drwxr-xr-x   - hbase supergroup          0 2023-01-22 21:47 /hbase/-ROOT-
drwxr-xr-x   - hbase supergroup          0 2023-01-22 21:47 /hbase/.META.
drwxr-xr-x   - hbase supergroup          0 2023-01-23 20:37 /hbase/.corrupt
drwxr-xr-x   - hbase supergroup          0 2023-03-06 17:11 /hbase/.logs
drwxr-xr-x   - hbase supergroup          0 2023-03-06 17:21 /hbase/.oldlogs
drwxr-xr-x   - hbase supergroup          0 2023-03-06 17:35 /hbase/blog
drwxr-xr-x   - hbase supergroup          0 2023-02-28 11:40 /hbase/blogs
drwxr-xr-x   - hbase supergroup          0 2023-03-01 07:03 /hbase/blogs1
-rw-r--r--   1 hbase supergroup         38 2023-01-22 21:47 /hbase/hbase.id
-rw-r--r--   1 hbase supergroup          3 2023-01-22 21:47 /hbase/hbase.version
drwxr-xr-x   - hbase supergroup          0 2023-03-03 12:40 /hbase/hbaseUserRating1
drwxr-xr-x   - hbase supergroup          0 2023-03-03 13:09 /hbase/hbaseUserRating2
drwxr-xr-x   - hbase supergroup          0 2023-03-03 13:13 /hbase/hbaseUserRating3
drwxr-xr-x   - hbase supergroup          0 2023-03-03 13:17 /hbase/hbaseUserRating4
drwxr-xr-x   - hbase supergroup          0 2023-03-01 14:32 /hbase/hbaseUserRatings
drwxr-xr-x   - hbase supergroup          0 2023-03-01 18:32 /hbase/hbaseUsrRatings
drwxr-xr-x   - hbase supergroup          0 2023-03-01 07:07 /hbase/myplace
drwxr-xr-x   - hbase supergroup          0 2023-02-28 11:52 /hbase/mytable
drwxr-xr-x   - hbase supergroup          0 2023-03-06 17:11 /hbase/splitlog
drwxr-xr-x   - hbase supergroup          0 2023-02-28 11:32 /hbase/user
drwxr-xr-x   - hbase supergroup          0 2023-03-01 06:57 /hbase/user1
drwxr-xr-x   - hbase supergroup          0 2023-03-06 17:32 /hbase/user2
[training@localhost ~]$ hadoop fs -ls /hbase/blog/*
Found 1 items
-rw-r--r--   1 hbase supergroup       1363 2023-03-06 17:35 /hbase/blog/.tableinfo.0000000001
Found 5 items
drwxr-xr-x   - hbase supergroup          0 2023-03-06 17:35 /hbase/blog/6cffcae4539bb05ea7a59ae4abe81bf0/.oldlogs
-rw-r--r--   1 hbase supergroup        219 2023-03-06 17:35 /hbase/blog/6cffcae4539bb05ea7a59ae4abe81bf0/.regioninfo
drwxr-xr-x   - hbase supergroup          0 2023-03-06 17:35 /hbase/blog/6cffcae4539bb05ea7a59ae4abe81bf0/body
drwxr-xr-x   - hbase supergroup          0 2023-03-06 17:35 /hbase/blog/6cffcae4539bb05ea7a59ae4abe81bf0/comment
drwxr-xr-x   - hbase supergroup          0 2023-03-06 17:35 /hbase/blog/6cffcae4539bb05ea7a59ae4abe81bf0/meta
[training@localhost ~]$ 
